# autocont

./: .env  .gitignore  README.md  add_audio.py  avatars.txt  client_secret.json  front_end_gradio.py  generate_speech.py  generate_speech_polly.py  generate_video.py  generate_video_text.py  main.py  pipeline.py  pyproject.toml  requirements.txt  search_trends.py  summarise_feed.py  try.py  upload_video.py  utils.py
.github/workflows/: hourly_pipeline.yml  news_update.yml  test.yml
heygen/: generate_subway_surfers.py  generate_video_audio.py  generate_video_text.py
speech/: elevenlabs.py  polly.py
