[project]
name = "vivek"
version = "0.1.0"
description = "first millionare project"
authors = [
    {name = "vivek",email = "vivekbv26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-auth (>=2.40.2,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.170.0,<3.0.0)",
    "openai-whisper (>=20240930,<20240931)",
    "redis (>=6.1.0,<7.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "newspaper3k (>=0.2.8,<0.3.0)",
    "langchain-core (>=0.3.61,<0.4.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
