[project]
name = "vivek"
version = "0.1.0"
description = "first millionaire project"
authors = [
    {name = "vivek", email = "vivekbv26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Core
    "requests >=2.32.3,<3.0.0",
    "python-dotenv >=1.1.0,<2.0.0",

    # Google APIs
    "google-auth >=2.40.2,<3.0.0",
    "google-auth-oauthlib >=1.2.2,<2.0.0",
    "google-auth-httplib2 >=0.2.0,<0.3.0",
    "google-api-python-client >=2.70.0,<3.0.0",

    # AI & LLMs
    "openai-whisper >=20240930,<20240931",
    "langchain >=0.1.0,<1.0.0",
    "langchain-core >=0.3.61,<0.4.0",
    "langchain-community >=0.0.30,<0.1.0",
    "langchain-google-genai >=0.0.5,<1.0.0",

    # Speech and TTS
    "elevenlabs >=1.1.1,<2.0.0",

    # Web & Data
    "redis >=6.1.0,<7.0.0",
    "newspaper3k >=0.2.8,<0.3.0",

    # Video & Audio
    "moviepy >=2.2.1,<3.0.0",
    "ffmpeg-python >=0.2.0,<0.3.0",

    # Supabase
    "supabase >=2.15.2,<3.0.0",

    # Utilities
    "pillow >=11.2.1,<12.0.0",
    "numpy >=2.2.6,<3.0.0",

    # Gradio UI
    "gradio >=4.27.0,<5.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
